# sinc

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  ISerializable.hpp  ModuleABC.py  ModuleManager.hpp  Package.hpp  PackageType.hpp  PackageTypeAtom.cpp  PackageTypeAtom.hpp  Remote.cpp  Remote.hpp  SInstance.hpp  main.cpp  sinc
tests/: ConfigurationTest.cpp  PackageTypeAtomTest.cpp  main.cpp
